clusters/base/network-policies/project-allow-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-allow-gateway-ingress
  namespace: ml-platform-project-housing
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-echo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ml-platform-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
      ports:
        - protocol: TCP
          port: 8080
