clusters/base/network-policies/project-allow-network-test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-allow-network-test
  namespace: ml-platform-project-housing
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: network-policy-allowed-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: network-policy-client
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-allow-network-test-egress
  namespace: ml-platform-project-housing
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: network-policy-client
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: network-policy-allowed-server
      ports:
        - protocol: TCP
          port: 8080
