clusters/base/network-policies/project-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-default-deny
  namespace: ml-platform-project-housing
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
